--- a/src/jfYu.Core/jfYu.Core.Data/jfYu.Core.Data.csproj
+++ b/src/jfYu.Core/jfYu.Core.Data/jfYu.Core.Data.csproj
@@ -2,20 +2,21 @@
 
   <PropertyGroup>
 
-	  <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
-	  <LangVersion>8.0</LangVersion>
-	  <Version>1.1.10</Version>
-	  <Authors>jfwang</Authors>
-	  <Description>Separation of reading and writing</Description>
-	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	  
-	  
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <LangVersion>8.0</LangVersion>
+    <Version>1.1.11</Version>
+    <Authors>jfwang</Authors>
+    <Description>Separation of reading and writing</Description>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
+
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
     <PackageReference Include="Mysql.Data.EntityFrameworkCore" Version="8.0.20" />
   </ItemGroup>
